--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ google_ad_slot           :
 # Site Author
 author:
   name             : "Andrew Beekhof"
-  avatar           : "andrew-photo.png"
+  avatar           : "andrew-bio.png"
   bio              : "Cluster guy to the rich and famous."
   location         : "Melbourne"
   email            : andrew@beekhof.net
