Fix about page. maybe?

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,11 @@ main:
   - title: "Posts"
     url: /year-archive/
 
-  - title: "Pages"
-    url: /page-archive/
+  - title: "Tags"
+    url: /tags/
 
   - title: "Collections"
     url: /collection-archive/
+
+  - title: "Sitemap"
+    url: /sitemap/    
