Turn off collections until i know what to do with them

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,10 @@ main:
   - title: "Tags"
     url: /tags/
 
-  - title: "Collections"
-    url: /collection-archive/
-
   - title: "Sitemap"
-    url: /sitemap/    
+    url: /sitemap/
+
+#  - title: "Collections"
+#    url: /collection-archive/
+
+    
