--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "That Cluster Guy"
 title_separator          : "-"
 name                     : "Andrew Beekhof"
 description              : "A thing I do."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "http://www.beekhof.net"
 feed:
   path: feed.xml
 baseurl                  : # the subpath of your site, e.g. "/blog"
